tests/snapshots/output/css_nested_conditions.snap
---
source: tests/snapshots/css.rs
description: "<style>\n.widget {\n    {% if enabled %}\n        display: block;\n        {% if has_border %}\n            border: 1px solid {% if is_primary %}#3b82f6{% else %}#6b7280{% endif %};\n        {% endif %}\n        {% match size %}\n            {% when \"small\" %}\n                padding: 4px;\n                font-size: 12px;\n            {% when \"large\" %}\n                padding: 16px;\n                font-size: 18px;\n            {% else %}\n                padding: 8px;\n                font-size: 14px;\n        {% endmatch %}\n    {% else %}\n        display: none;\n    {% endif %}\n}\n</style>\n"
---
<style>
    .widget {
        {% if enabled %}
            display: block;
            {% if has_border %}
                border: 1px solid {% if is_primary %}#3b82f6{% else %}#6b7280{% endif %};
            {% endif %}
            {% match size %}
                {% when "small" %}padding: 4px;font-size: 12px;
                {% when "large" %}padding: 16px;font-size: 18px;
                {% else %}padding: 8px;font-size: 14px;
            {% endmatch %}
        {% else %}
            display: none;
        {% endif %}
    }
</style>
