tests/snapshots/output/css_variables.snap
---
source: tests/snapshots/css.rs
description: "<style>\n:root {\n    --primary-color: {{ primary }};\n    --secondary-color: {{ secondary }};\n    --spacing-unit: {{ spacing }}px;\n    {% for i in 1..=5 %}\n    --spacing-{{ i }}: {{ i * spacing }}px;\n    {% endfor %}\n}\n\n{% if enable_dark_mode %}\n[data-theme=\"dark\"] {\n    --primary-color: {{ dark_primary }};\n    --secondary-color: {{ dark_secondary }};\n}\n{% endif %}\n\n.component {\n    color: var(--primary-color);\n    padding: var(--spacing-2);\n}\n</style>\n"
---
<style>
    :root {
        --primary-color: {{ primary }};
        --secondary-color: {{ secondary }};
        --spacing-unit: {{ spacing }}px;
        {% for i in 1..=5 %}
        --spacing-{{ i }}: {{ i * spacing }}px;
        {% endfor %}
    }

    {% if enable_dark_mode %}
    [data-theme="dark"] {
        --primary-color: {{ dark_primary }};
        --secondary-color: {{ dark_secondary }};
    }
    {% endif %}

    .component {
        color: var(--primary-color);
        padding: var(--spacing-2);
    }
</style>
