tests/snapshots/output/diagnostics_invalid_css.snap
---
source: tests/snapshots/diagnostics.rs
description: "<style>\n  .foo {\n    color: red;\n</style>\n"
---
<style>
    .foo {
      color: red;
</style>
