tests/snapshots/output/doctype.snap
---
source: tests/snapshots/html.rs
description: "<!DOCTYPE html><title>Page Title</title>\n"
---
<!DOCTYPE html>
<title>Page Title</title>
