tests/snapshots/output/empty_block.snap
---
source: tests/snapshots/rules.rs
description: "{% block content %}{% endblock %}\n"
---
{% block content %}{% endblock %}
