tests/snapshots/output/empty_if.snap
---
source: tests/snapshots/rules.rs
description: "{% if foo %}{% endif %}\n"
---
{% if foo %}{% endif %}
